--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item {% if page.title == 'Home' %}active{% endif %}">
-                    <a class="nav-link" href="{{ site.baseurl }}/">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ site.baseurl }}/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://aaf.freshdesk.com/support/home">Support Centre</a>
