add AAF cover image and index page css

--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -12,7 +12,7 @@
                     <a class="nav-link" href="{{ site.baseurl }}/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="current" href="https://aaf.freshdesk.com/support/home">Support Centre</a>
+                    <a class="nav-link" href="https://aaf.freshdesk.com/support/home">Support Centre</a>
                 </li>
             </ul>
         </div>
