--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -12,7 +12,7 @@ main {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Figtree', sans-serif;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 .nav-link {
@@ -90,6 +90,87 @@ header {
     a {
       color: #fff;
       text-decoration: none;
+    }
+  }
+}
+
+/*
+ * Sidebar
+ */
+.sidebar {
+  padding-top: 1.5rem;
+  font-size: 0.9em;
+  .list-group-item.active {
+    color: #000000;
+  }
+}
+
+/*
+ * Cards
+ */
+.card {
+  // min-width: 280px;
+}
+
+.card-container {
+  .card-header,
+  .card-body,
+  .card-footer {
+    padding: 0.75em;
+  }
+  a.card-tut-link {
+    color: inherit;
+    text-decoration: none;
+  }
+}
+
+.card-category {
+  .series {
+    width: 2rem;
+    height: 2rem;
+  }
+}
+
+/*
+ * Diffculty indicator
+ */
+.difficulty-indicator {
+  background-image: url("level-of-difficulty.svg");
+  background-position-y: 5px;
+  background-position-x: -75px;
+  background-repeat: no-repeat;
+  display: inline-block;
+  margin-left: 3px;
+  margin-right: -3px;
+  text-indent: -99999px;
+  width: 75px;
+}
+
+.difficulty-indicator-1 {
+  background-position-x: -60px;
+}
+.difficulty-indicator-2 {
+  background-position-x: -45px;
+}
+.difficulty-indicator-3 {
+  background-position-x: -30px;
+}
+.difficulty-indicator-4 {
+  background-position-x: -15px;
+}
+.difficulty-indicator-5 {
+  background-position-x: 0px;
+}
+
+/*
+ * Sidebar items
+ */
+/* https://stackoverflow.com/questions/40463542/how-to-make-vertical-lines-between-list-items-using-css */
+
+#up-next {
+  a {
+    &:hover {
+      color: #ffffff;
     }
   }
 }
