Add bootstrap callouts and cover image

--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -10,7 +10,7 @@ main {
 
 .h1, .h2, .h3, .h4, .h5, .h6,
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: 400;
 }
@@ -31,8 +31,9 @@ header {
 }
 
 .banner-hero-card {
-  background: #ffffff;
-  padding: 40px 60px 40px 40px;
+  background: #f8faf9;
+  padding: 40px 40px 40px 40px;
+  border-radius: 3px;
 }
 
 /*
