Update to AAF orange

--- a/site/_sass/_variables.scss
+++ b/site/_sass/_variables.scss
@@ -5,10 +5,12 @@ $font-family-base: 'Figtree', sans-serif;
 $font-size-base: 1rem;
 $form-label-font-weight: 600;
 
+// TODO change these to AAF colours
+// https://github.com/ausaccessfed/federationmanager/blob/master/app/frontend/stylesheets/tailwind.config.js
 // ARDC colours
 $ardc-blue:   #00A2C4;
 $ardc-pink:   #E51875;
-$ardc-orange: #F8B20E;
+$ardc-orange: #faae1d;
 $ardc-purple: #8E489B;
 $ardc-grey:   #969696;
 
