--- a/docs/assets/css/styles.scss
+++ b/docs/assets/css/styles.scss
@@ -3,3 +3,9 @@
 @import "main";
 @import 'external/font-awesome';
 @import "bootstrap-callouts";
+//@import "prism.css";
+//@import "prism-dark.css";
+//@import "prism-twighlight.css";
+//@import "prism-okaida.css";
+@import "prism-tommorow-night.css";
+//@import "prism-funky.css";
