--- a/docs/assets/css/styles.scss
+++ b/docs/assets/css/styles.scss
@@ -1,8 +1,12 @@
 ---
 ---
+
+$baseurl: "{{ site.baseurl }}";
+
 @import "main";
 @import 'external/font-awesome';
 @import "bootstrap-callouts";
+@import "typeahead";
 @import "prism.css";
 //@import "prism-dark.css";
 //@import "prism-twighlight.css";
