--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,17 +1,11 @@
 <footer class="footer bg-dark text-white mt-auto">
   <div class="container">
     <div class="row align-items-end mb-5">
-      <div class="col-sm-8 footer-text pe-5">
-        <p>The Nectar Research Cloud is a service of the Australian Research Data Commons (ARDC) and utilises the Nectar Research Cloud.
-          The Australian Research Data Commons (ARDC) is enabled by the National Collaborative Research Infrastructure Strategy Program (NCRIS).
-          <a href="https://ardc.edu.au/about/" target="_blank">Read more about the ARDC...</a>
-        </p>
-      </div>
       <div class="col-sm-4">
         <div class="row">
-          <div class="col-7 align-self-end">
-            <a href="https://www.ardc.edu.au/" target="_blank">
-              <img src="{{ site.baseurl }}/assets/images/ardc_logo_rev.svg" class="img-fluid" alt="Australian Research Data Commons (ARDC)">
+          <div class="col-5 align-self-end">
+            <a href="https://aaf.edu.au/" target="_blank">
+              <img src="{{ site.baseurl }}/assets/images/AAF-logo-REV-2023-600x360-1-300x180.webp" class="img-fluid" alt="AAF">
             </a>
           </div>
           <div class="col-5 align-self-end">
@@ -27,35 +21,27 @@
         <h4>Quicklinks</h4>
         <ul class="list-unstyled">
           <li><a href="/">Home</a></li>
-          <li><a href="https://dashboard.rc.nectar.org.au/terms/">Terms of Service</a></li>
-          <li><a href="https://ardc.edu.au/privacy-policy/">Privacy Policy</a></li>
+          <li><a href="https://trust.aaf.edu.au/wp-content/uploads/AAF_PCY_Privacy-policy_v1.3_20230919-for-web-2.pdf">Privacy Policy</a></li>
+          <li><a href="https://aaf.edu.au/wp-content/uploads/2020/10/AAF_PCY_Privacy-Collection-Notice-2020.pdf">Privacy Collection Notice</a></li>
         </ul>
       </div>
       <div class="col-sm-3 col-xs-6">
         <h4>Explore</h4>
         <ul class="list-unstyled">
-          <li><a href="https://support.ehelp.edu.au/support/solutions/folders/6000190150">Cloud Basics</a></li>
-          <li><a href="https://support.ehelp.edu.au/support/solutions/folders/6000232361">Cloud Services</a></li>
-          <li><a href="https://support.ehelp.edu.au/support/solutions/folders/6000230414">Cloud Applications</a></li>
-          <li><a href="https://support.ehelp.edu.au/support/solutions/folders/6000190155">Cloud Fundamentals</a></li>
+          <li><a href="/">Tutorials</a></li>
         </ul>
       </div>
       <div class="col-sm-3 col-xs-6">
         <h4>Help</h4>
         <ul class="list-unstyled">
-          <li><a href="https://support.ehelp.edu.au/support/tickets/new" target="_blank">Request Support</a></li>
-          <li><a href="https://support.ehelp.edu.au/support/home#chat" data-proofer-ignore>Online Chat</a></li>
-          <li><a href="https://tutorials.rc.nectar.org.au">Tutorials</a></li>
+          <li><a href="https://aaf.edu.au/about/contact-us/" target="_blank">Email Request</a></li>
+          <li><a href="https://support.aaf.edu.au/support/tickets/new">Online Request</a></li>
         </ul>
       </div>
       <div class="col-sm-3 col-xs-6">
         <h4>External Resources</h4>
         <ul class="list-unstyled">
-          <li><a href="https://ardc.edu.au/">ARDC Home</a></li>
-          <li><a href="https://dashboard.rc.nectar.org.au/">Nectar Dashboard</a></li>
-          <li><a href="https://desktop.rc.nectar.org.au/">Virtual Desktop Service</a></li>
-          <li><a href="https://jupyterhub.rc.nectar.org.au/">Jupyter Notebook Service</a></li>
-          <li><a href="https://ardc.edu.au/services/">ARDC Online Services</a></li>
+          <li><a href="https://aaf.edu.au/">AAF Home</a></li>
         </ul>
       </div>
     </div>
