--- a/docs/_layouts/tutorial.html
+++ b/docs/_layouts/tutorial.html
@@ -41,13 +41,25 @@ layout: default
     <div class="row">
         <div class="col-md-3 d-none d-md-block">
             <div class="sidebar py-3 sticky-top">
+                {% if collection.curriculum %}
+                <div class="p-2">
+                    <p class="mb-1"><i class="fa fa-info-circle"></i> This tutorial is part of the {{ collection.curriculum }} Series.</p>
+                    {% if collection.curriculum == "Cloud Starter" %}
+                    <a class="btn btn-link btn-sm p-0" href="{{ '/cloud-starter/02-tutorials' | prepend: site.baseurl }}"><i class="fa fa-arrow-left"></i> Back to Cloud Starter</a>
+                    {% elsif collection.curriculum == "Cloud Two" %}
+                    <a class="btn btn-link btn-sm p-0" href="{{ '/cloud-two/02-tutorials' | prepend: site.baseurl }}"><i class="fa fa-arrow-left"></i> Back to Cloud Two</a>
+                    {% elsif collection.curriculum == "Cloud Expert" %}
+                    <a class="btn btn-link btn-sm p-0" href="{{ '/cloud-expert/02-tutorials' | prepend: site.baseurl }}"><i class="fa fa-arrow-left"></i> Back to Cloud Expert</a>
+                    {% endif %}
+                </div>
+                {% endif %}
                 <div class="card mb-3 bg-dark shadow">
                     <div class="card-body text-white">
                         <p class="d-block d-lg-flex align-items-end"><small class="mr-auto text-uppercase">Category: </small>{{ collection.level }}</p>
                         <p class="d-block d-lg-flex align-items-end"><small class="mr-auto text-uppercase">Difficulty: </small>
                             <span class="difficulty-indicator difficulty-indicator-{{ collection.difficulty }}">
-                                {{ collection.difficulty }} out of 5
-                            </span>
+                  {{ collection.difficulty }} out of 5
+                </span>
                         </p>
                         <p class="d-block d-lg-flex align-items-end mb-0"><small class="mr-auto text-uppercase">Duration: </small>{{ collection.duration }} minutes</p>
                     </div>
@@ -63,6 +75,9 @@ layout: default
                     {% endif -%}
                     {% endfor -%}
                 </div>
+                <div class="p-2">
+                    <p>Find a mistake? Let us know <a href="https://github.com/ausaccessfed/dev-portal/issues">the issue here</a>.</p>
+                </div>
             </div>
         </div>
 
@@ -72,3 +87,34 @@ layout: default
         </div>
     </div> <!-- row -->
 </div>
+<section id="up-next" class="p-5 bg-info text-white text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-8 offset-md-2">
+                {% if next %}
+                <h3>Up Next:</h3>
+                <p class="lead"><a href="{{ next.url | prepend: site.baseurl }}" class="text-white">{{ next.order }}. {{ next.title }} <i class="fa fa-arrow-right"></i></a></p>
+                {% else %}
+                {% if collection.level == 'Series' %}
+                <h3>Series Complete!</h3>
+                <p>You have completed this Series of Tutorials. Return to the tutorials home page to explore other tutorials.</p>
+                <a href="{{ site.baseurl }}/" class="btn btn-sm btn-primary" role="button">Return Home</a>
+                {% else %}
+                <h3>Tutorial Complete!</h3>
+                <p>You have completed this tutorial. Continue with the other tutorials in the {{ page.category }} Series or return to the tutorials home page.</p>
+                {% if collection.curriculum %}
+                {% if collection.curriculum == "Cloud Starter" %}
+                <a class="btn btn-sm btn-success" href="{{ '/cloud-starter/02-tutorials' | prepend: site.baseurl }}">Continue Series</a>
+                {% elsif collection.curriculum == "Cloud Two" %}
+                <a class="btn btn-sm btn-success" href="{{ '/cloud-two/02-tutorials' | prepend: site.baseurl }}">Continue Series</a>
+                {% elsif collection.curriculum == "Cloud Expert" %}
+                <a class="btn btn-sm btn-success" href="{{ '/cloud-expert/02-tutorials' | prepend: site.baseurl }}">Continue Series</a>
+                {% endif %}
+                {% endif %}
+                <a href="{{ site.baseurl }}/" class="btn btn-sm btn-primary" role="button">Return Home</a>
+                {% endif %}
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</section>
