--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container py-2">
-    <a class="navbar-brand" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/assets/images/aaflogo.png" height="60" class="mr-2" alt="ARDC Nectar Research Cloud Tutorials">
+    <a class="navbar-brand" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/assets/images/aaflogo.png" height="60" class="mr-2" alt="AAF Tutorials">
       Tutorials
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
