Update footer, nav and config links

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -42,6 +42,9 @@
         <h4>External Resources</h4>
         <ul class="list-unstyled">
           <li><a href="https://aaf.edu.au/">AAF Home</a></li>
+          <li><a href="https://manager.aaf.edu.au/">Federation Manager</a></li>
+          <li><a href="https://validator.aaf.edu.au/">Validator Service</a></li>
+          <li><a href="https://status.aaf.edu.au/">Federation Status</a></li>
         </ul>
       </div>
     </div>
