--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -17,9 +17,9 @@
         <li class="nav-item dropdown nectar-menu">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">Services</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="https://#/">Federation Manager</a>
-            <a class="dropdown-item" href="https://#/">Validator Service</a>
-            <a class="dropdown-item" href="https://#/">Reporting Service</a>
+            <a class="dropdown-item" href="https://manager.aaf.edu.au/">Federation Manager</a>
+            <a class="dropdown-item" href="https://validator.aaf.edu.au/">Validator Service</a>
+            <a class="dropdown-item" href="https://status.aaf.edu.au/">Federation Status</a>
           </div>
         </li>
       </ul>
