Remove old images, update styling

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -62,7 +62,7 @@ h1, h2, h3, h4, h5, h6 {
  */
 header {
   background-color: #969696;
-  background-image: url($baseurl + "/assets/images/main-image.jpg");
+  background-image: url($baseurl + "/assets/images/main-image copy.jpg");
   background-size: cover;
   padding-bottom: 200px;
   margin-bottom: -200px;
