--- a/docs/_layouts/tutorial.html
+++ b/docs/_layouts/tutorial.html
@@ -88,7 +88,7 @@ layout: default
     </div> <!-- row -->
 </div>
 <section id="up-next" class="p-5 bg-info text-white text-center">
-  <div class="container">
+  <div class="container pb-5">
     <div class="row">
       <div class="col-sm-12 col-md-8 offset-md-2">
         {% if next %}
