Override bootstrap colours

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -95,7 +95,7 @@ header {
     a {
       &:hover,
       &:focus {
-        color: $ardc-pink;
+        color: $aaf-pink;
         text-decoration: underline;
       }
     }
