--- a/docs/_sass/_variables.scss
+++ b/docs/_sass/_variables.scss
@@ -1,7 +1,7 @@
 // Bootstrap overrides
 
-$font-family-sans-serif: 'Figtree', sans-serif;
-$font-family-base: 'Figtree', sans-serif;
+$font-family-sans-serif: 'Raleway', sans-serif;
+$font-family-base: 'Lato', sans-serif;
 $font-size-base: 1rem;
 $form-label-font-weight: 600;
 
