--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -15,7 +15,7 @@
           <a class="nav-link" href="https://aaf.freshdesk.com/support/home/">Support Centre</a>
         </li>
         <li class="nav-item dropdown nectar-menu">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">Services</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Services</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="https://manager.aaf.edu.au/">Federation Manager</a>
             <a class="dropdown-item" href="https://validator.aaf.edu.au/">Validator Service</a>
