Update to aaf colours

--- a/docs/_sass/_variables.scss
+++ b/docs/_sass/_variables.scss
@@ -35,15 +35,15 @@ $gray-800: #222222;
 $gray-900: #111111;
 
 $primary:       $orange;
-$secondary:     $gray;
+$secondary:     $indigo;
 $success:       #62C400;
 $info:          $blue;
-$warning:       $orange;
+$warning:       $yellow;
 $danger:        $pink;
 
 $body-bg:                   $gray-100;
 $body-color:                $gray-900;
-$link-color:                $blue;
+$link-color:                $indigo;
 
 $min-contrast-ratio: 1.5;
 //$component-active-bg: $ardc-purple;
