--- a/docs/_layouts/tutorial.html
+++ b/docs/_layouts/tutorial.html
@@ -93,7 +93,7 @@ layout: default
       </div>
     </div> <!-- row -->
 </div>
-<section id="up-next" class="p-5 bg-info text-white text-center">
+<section id="up-next" class="p-5 bg-primary text-white text-center">
   <div class="container pb-5">
     <div class="row">
       <div class="col-sm-12 col-md-8 offset-md-2">
@@ -104,20 +104,22 @@ layout: default
           {% if collection.level == 'Series' %}
             <h3>Series Complete!</h3>
             <p>You have completed this Series of Tutorials. Return to the tutorials home page to explore other tutorials.</p>
-            <a href="{{ site.baseurl }}/" class="btn btn-sm btn-primary" role="button">Return Home</a>
+            <a href="{{ site.baseurl }}/" class="btn btn-sm bg-secondary text-white" role="button">Return Home</a>
           {% else %}
             <h3>Tutorial Complete!</h3>
             <p>You have completed this tutorial. Continue with the other tutorials in the {{ page.category }} Series or return to the tutorials home page.</p>
             {% if collection.curriculum %}
-              {% if collection.curriculum == "Cloud Starter" %}
-                <a class="btn btn-sm btn-success" href="{{ '/cloud-starter/02-tutorials' | prepend: site.baseurl }}">Continue Series</a>
-              {% elsif collection.curriculum == "Cloud Two" %}
-                <a class="btn btn-sm btn-success" href="{{ '/cloud-two/02-tutorials' | prepend: site.baseurl }}">Continue Series</a>
-              {% elsif collection.curriculum == "Cloud Expert" %}
-                <a class="btn btn-sm btn-success" href="{{ '/cloud-expert/02-tutorials' | prepend: site.baseurl }}">Continue Series</a>
+              {% if collection.curriculum == "OpenID Connect" %}
+                <a class="btn btn-sm btn-success" href="{{ '/openid-connect-series/02-tutorials' | prepend: site.baseurl }}">Continue Series</a>
+              {% elsif collection.curriculum == "Rapid Connect" %}
+                <a class="btn btn-sm btn-success" href="{{ '/rapid-connect-series/02-tutorials' | prepend: site.baseurl }}">Continue Series</a>
+              {% elsif collection.curriculum == "SAML" %}
+                <a class="btn btn-sm btn-success" href="{{ '/saml-series/02-tutorials' | prepend: site.baseurl }}">Continue Series</a>
+              {% elsif collection.curriculum == "VerifID" %}
+                <a class="btn btn-sm btn-success" href="{{ '/verifid-series/02-tutorials' | prepend: site.baseurl }}">Continue Series</a>
               {% endif %}
             {% endif %}
-            <a href="{{ site.baseurl }}/" class="btn btn-sm btn-primary" role="button">Return Home</a>
+            <a href="{{ site.baseurl }}/" class="btn btn-sm bg-secondary text-white" role="button">Return Home</a>
           {% endif %}
         {% endif %}
       </div>
