--- a/docs/_sass/_variables.scss
+++ b/docs/_sass/_variables.scss
@@ -43,7 +43,7 @@ $danger:        $pink;
 
 $body-bg:                   $gray-100;
 $body-color:                $gray-900;
-$link-color:                $indigo;
+$link-color:                $blue;
 
 $min-contrast-ratio: 1.5;
 //$component-active-bg: $ardc-purple;
