More formatting updates

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -3,12 +3,12 @@
     <div class="row align-items-end mb-5">
       <div class="col-sm-4">
         <div class="row">
-          <div class="col-5 align-self-end">
+          <div class="col-5 float-right">
             <a href="https://aaf.edu.au/" target="_blank">
               <img src="{{ site.baseurl }}/assets/images/AAF-logo-REV-2023-600x360-1-300x180.webp" class="img-fluid" alt="AAF">
             </a>
           </div>
-          <div class="col-5 align-self-end">
+          <div class="col-5 float-right">
             <a href="https://www.education.gov.au/ncris" target="_blank">
               <img src="{{ site.baseurl }}/assets/images/ncris_mono_rev.svg" class="img-fluid" alt="National Collaborative Research Infrastructure Strategy (NCRIS)">
             </a>
