--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -3,8 +3,8 @@
 
 $baseurl: "{{ site.baseurl }}";
 
-// Use ARDC Figtree Google Font
-@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+// Use AAF Raleway Google Font
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @import "variables";
 @import "bootstrap/bootstrap";
