--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -47,6 +47,7 @@
           <li><a href="https://status.aaf.edu.au/">Federation Status</a></li>
         </ul>
       </div>
+      <a href="https://www.freepik.com/free-vector/abstract-glossy-wave-dark-background_4287940.htm#&position=2&from_view=search&track=ais&uuid=8919301c-97d2-423c-9f74-280341ba4c48">Image by Creative_hat</a> on Freepik
     </div>
   </div> 
 </footer>
