More general cleanup (#73)
* Update tags

* Update links

* Update main page (for last time) and formatting

* Update verifid formatting

* Update to aaf colours

* Add series links

* Update colours and logo placement

* Remove production links

* Move image reference to bottom of footer

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -3,12 +3,12 @@
     <div class="row align-items-end mb-5">
       <div class="col-sm-4">
         <div class="row">
-          <div class="col-5 align-self-end">
+          <div class="col-5 float-right">
             <a href="https://aaf.edu.au/" target="_blank">
               <img src="{{ site.baseurl }}/assets/images/AAF-logo-REV-2023-600x360-1-300x180.webp" class="img-fluid" alt="AAF">
             </a>
           </div>
-          <div class="col-5 align-self-end">
+          <div class="col-5 float-right">
             <a href="https://www.education.gov.au/ncris" target="_blank">
               <img src="{{ site.baseurl }}/assets/images/ncris_mono_rev.svg" class="img-fluid" alt="National Collaborative Research Infrastructure Strategy (NCRIS)">
             </a>
@@ -47,6 +47,7 @@
           <li><a href="https://status.aaf.edu.au/">Federation Status</a></li>
         </ul>
       </div>
+      <a href="https://www.freepik.com/free-vector/abstract-glossy-wave-dark-background_4287940.htm#&position=2&from_view=search&track=ais&uuid=8919301c-97d2-423c-9f74-280341ba4c48">Image by Creative_hat</a> on Freepik
     </div>
   </div> 
 </footer>
