--- a/docs/_sass/_variables.scss
+++ b/docs/_sass/_variables.scss
@@ -8,8 +8,8 @@ $form-label-font-weight: 600;
 // AAF colours
 $aaf-blue:   #00A2C4;
 $aaf-pink:   #E51875;
-$aaf-orange: #E89644;
-$aaf-yellow: #f1B94d;
+$aaf-orange: #E37743;
+$aaf-yellow: #E89644;
 $aaf-indigo: #5F368A;
 $aaf-purple: #2A004A;
 $aaf-grey:   #969696;
@@ -34,8 +34,8 @@ $gray-700: #333333;
 $gray-800: #222222;
 $gray-900: #111111;
 
-$primary:       $orange;
-$secondary:     $gray;
+$primary:       $yellow;
+$secondary:     $indigo;
 $success:       #62C400;
 $info:          $blue;
 $warning:       $orange;
@@ -46,7 +46,6 @@ $body-color:                $gray-900;
 $link-color:                $blue;
 
 $min-contrast-ratio: 1.5;
-//$component-active-bg: $ardc-purple;
 $navbar-brand-padding-y: 0;
 $input-btn-padding-y-lg: .75rem;
 $input-btn-padding-x-lg: 1.25rem;
