--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,6 +1,11 @@
 <footer class="footer bg-dark text-white mt-auto">
   <div class="container">
     <div class="row align-items-end mb-5">
+      <div class="col-sm-8 footer-text pe-5">
+        <p>The AAF Support Tutorials website utilises the code framework from Nectar Research Cloud, a service of The Australian Research Data Commons (ARDC).
+          <a href="https://ardc.edu.au/about/" target="_blank">Read more about the ARDC...</a>
+        </p>
+      </div>
       <div class="col-sm-4">
         <div class="row">
           <div class="col-5 float-right">
@@ -47,7 +52,6 @@
           <li><a href="https://status.aaf.edu.au/">Federation Status</a></li>
         </ul>
       </div>
-      <a href="https://www.freepik.com/free-vector/abstract-glossy-wave-dark-background_4287940.htm#&position=2&from_view=search&track=ais&uuid=8919301c-97d2-423c-9f74-280341ba4c48">Image by Creative_hat</a> on Freepik
     </div>
   </div> 
 </footer>
