--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -87,8 +87,8 @@ header {
 /*
  * Footer
  */
- .footer {
-  padding: 24px 0;
+.footer {
+  padding: 127px 0;
   .footer-text {
     a {
       &:hover,
@@ -101,11 +101,11 @@ header {
       list-style: none;
     }
   }
-  h4 {
+  h5 {
     text-transform:  uppercase;
     &:after {
       content: "";
-      background: #fff;
+      background: #5F368A;
       height: 2px;
       display: block;
       margin-top: 10px;
@@ -114,7 +114,7 @@ header {
   }
   .footer-links {
     a {
-      color: #fff;
+      color: $info;
       text-decoration: none;
     }
   }
