Adjust column sizing, add Lato font

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,50 +1,57 @@
-<footer class="footer text-white mt-auto" style="background-color: #222222">
+<footer class="footer mt-auto" style="background-color: #333333">
   <div class="container">
     <div class="row h-100 footer-links">
-      <div class="col-sm-3 col-xs-6">
+      <div class="col-12 col-sm-3">
         <a href="https://aaf.edu.au/" target="_blank">
-          <img src="{{ site.baseurl }}/assets/images/AAF-logo-REV-2023-600x360-1-300x180.webp" class="img-fluid" alt="AAF">
+          <img class="logo" src="{{ site.baseurl }}/assets/images/AAF-logo-REV-2023-600x360-1-300x180.webp" alt="AAF">
         </a>
-        <div class="icon" style="">
-          <a href="https://twitter.com/ausaccessfed" target="_blank" style="margin-bottom: 10px;"
-             rel="external noopener noreferrer">
-            <i class="fa fa-twitter"></i>
-          </a>
-        </div>
-        <div class="icon" style="">
-          <a href="https://www.youtube.com/channel/UC-lLEcDyxEkmVh_XFzkTriA" target="_blank" style="margin-bottom: 10px;"
-             rel="external noopener noreferrer">
-            <i class="fa fa-youtube"></i>
-          </a>
-        </div>
-        <div class="icon" style="">
-          <a href="https://www.linkedin.com/company/australian-access-federation-inc-" target="_blank" style="margin-bottom: 10px;"
-             rel="external noopener noreferrer">
-            <i class="fa fa-linkedin"></i>
-          </a>
+        <div class="socials">
+          <div class="icon" style="">
+            <a href="https://twitter.com/ausaccessfed" target="_blank" style="margin-bottom: 10px;"
+               rel="external noopener noreferrer">
+              <i class="fa fa-twitter"></i>
+            </a>
+          </div>
+          <div class="icon" style="">
+            <a href="https://www.youtube.com/channel/UC-lLEcDyxEkmVh_XFzkTriA" target="_blank" style="margin-bottom: 10px;"
+               rel="external noopener noreferrer">
+              <i class="fa fa-youtube"></i>
+            </a>
+          </div>
+          <div class="icon" style="">
+            <a href="https://www.linkedin.com/company/australian-access-federation-inc-" target="_blank" style="margin-bottom: 10px;"
+               rel="external noopener noreferrer">
+              <i class="fa fa-linkedin"></i>
+            </a>
+          </div>
         </div>
         <p>AAF acknowledges the First Australians on whose traditional lands we live and work, and we pay our respects to Elders past, present and emerging.</p>
+        <div class="footer-text">
+          <p>The AAF Support Tutorials website utilises the code framework from Nectar Research Cloud, a service of the Australian Research Data Commons (ARDC).
+            <a href="https://ardc.edu.au/about/" target="_blank">Read more about the ARDC.</a>
+          </p>
+        </div>
       </div>
-      <div class="col-sm-3 col-xs-6">
+      <div class="col-12 col-sm-3">
         <h5>External Resources</h5>
-        <ul class="list-unstyled">
+        <ul class="list-unstyled footer-text">
           <li><a href="https://aaf.edu.au/">AAF Home</a></li>
           <li><a href="https://manager.aaf.edu.au/">Federation Manager</a></li>
           <li><a href="https://validator.aaf.edu.au/">Validator Service</a></li>
           <li><a href="https://status.aaf.edu.au/">Federation Status</a></li>
         </ul>
       </div>
-      <div class="col-sm-3 col-xs-6">
+      <div class="col-12 col-sm-3">
         <h5>Enabled by NCRIS</h5>
         <div class="col-5 float-right">
           <a href="https://www.education.gov.au/ncris" target="_blank">
-            <img src="{{ site.baseurl }}/assets/images/ncris_mono_rev.svg" class="img-fluid" alt="National Collaborative Research Infrastructure Strategy (NCRIS)">
+            <img src="{{ site.baseurl }}/assets/images/ncris_mono_rev.svg" width="161" height="126" alt="National Collaborative Research Infrastructure Strategy (NCRIS)">
           </a>
         </div>
       </div>
-      <div class="col-sm-3 col-xs-6">
+      <div class="col-12 col-sm-3">
         <h5>Contact Us</h5>
-        <ul class="list-unstyled">
+        <ul class="list-unstyled footer-text">
           <li><a href="mailto:enquiries@aaf.edu.au">enquiries@aaf.edu.au</a></li>
           <br>
           <li><a href="mailto:support@aaf.edu.au">support@aaf.edu.au</a></li>
@@ -59,11 +66,6 @@
           <li><a href="https://aaf.edu.au/wp-content/uploads/2020/10/AAF_PCY_Privacy-Collection-Notice-2020.pdf">Privacy Collection Notice</a></li>
         </ul>
       </div>
-    </div>
-    <div class="col-sm-8 footer-text pe-5">
-      <p>The AAF Support Tutorials website utilises the code framework from Nectar Research Cloud, a service of The Australian Research Data Commons (ARDC).
-        <a href="https://ardc.edu.au/about/" target="_blank">Read more about the ARDC...</a>
-      </p>
     </div>
   </div> 
 </footer>
