Adjust sizing for ncris image

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -45,7 +45,7 @@
         <h5>Enabled by NCRIS</h5>
         <div class="col-5 float-right">
           <a href="https://www.education.gov.au/ncris" target="_blank">
-            <img src="{{ site.baseurl }}/assets/images/ncris_mono_rev.svg" width="161" height="126" alt="National Collaborative Research Infrastructure Strategy (NCRIS)">
+            <img class="ncris" src="{{ site.baseurl }}/assets/images/ncris_mono_rev.svg" alt="National Collaborative Research Infrastructure Strategy (NCRIS)">
           </a>
         </div>
       </div>
