--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -9,19 +9,19 @@
           <div class="icon" style="">
             <a href="https://twitter.com/ausaccessfed" target="_blank" style="margin-bottom: 10px;"
                rel="external noopener noreferrer">
-              <i class="fa fa-twitter"></i>
+              <i class="fab fa-twitter"></i>
             </a>
           </div>
           <div class="icon" style="">
             <a href="https://www.youtube.com/channel/UC-lLEcDyxEkmVh_XFzkTriA" target="_blank" style="margin-bottom: 10px;"
                rel="external noopener noreferrer">
-              <i class="fa fa-youtube"></i>
+              <i class="fab fa-youtube"></i>
             </a>
           </div>
           <div class="icon" style="">
             <a href="https://www.linkedin.com/company/australian-access-federation-inc-" target="_blank" style="margin-bottom: 10px;"
                rel="external noopener noreferrer">
-              <i class="fa fa-linkedin"></i>
+              <i class="fab fa-linkedin"></i>
             </a>
           </div>
         </div>
