--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,53 +1,71 @@
-<footer class="footer bg-dark text-white mt-auto">
+<footer class="footer mt-auto" style="background-color: #333333">
   <div class="container">
-    <div class="row align-items-end mb-5">
-      <div class="col-sm-4">
-        <div class="row">
-          <div class="col-5 float-right">
-            <a href="https://aaf.edu.au/" target="_blank">
-              <img src="{{ site.baseurl }}/assets/images/AAF-logo-REV-2023-600x360-1-300x180.webp" class="img-fluid" alt="AAF">
+    <div class="row h-100 footer-links">
+      <div class="col-12 col-sm-3">
+        <a href="https://aaf.edu.au/" target="_blank">
+          <img class="logo" src="{{ site.baseurl }}/assets/images/AAF-logo-REV-2023-600x360-1-300x180.webp" alt="AAF">
+        </a>
+        <div class="socials">
+          <div class="icon" style="">
+            <a href="https://twitter.com/ausaccessfed" target="_blank" style="margin-bottom: 10px;"
+               rel="external noopener noreferrer">
+              <i class="fab fa-twitter"></i>
             </a>
           </div>
-          <div class="col-5 float-right">
-            <a href="https://www.education.gov.au/ncris" target="_blank">
-              <img src="{{ site.baseurl }}/assets/images/ncris_mono_rev.svg" class="img-fluid" alt="National Collaborative Research Infrastructure Strategy (NCRIS)">
+          <div class="icon" style="">
+            <a href="https://www.youtube.com/channel/UC-lLEcDyxEkmVh_XFzkTriA" target="_blank" style="margin-bottom: 10px;"
+               rel="external noopener noreferrer">
+              <i class="fab fa-youtube"></i>
+            </a>
+          </div>
+          <div class="icon" style="">
+            <a href="https://www.linkedin.com/company/australian-access-federation-inc-" target="_blank" style="margin-bottom: 10px;"
+               rel="external noopener noreferrer">
+              <i class="fab fa-linkedin"></i>
             </a>
           </div>
         </div>
+        <p>AAF acknowledges the First Australians on whose traditional lands we live and work, and we pay our respects to Elders past, present and emerging.</p>
+        <div class="footer-text">
+          <p>The AAF Support Tutorials website utilises the code framework from Nectar Research Cloud, a service of the Australian Research Data Commons (ARDC).
+            <a href="https://ardc.edu.au/about/" target="_blank">Read more about the ARDC.</a>
+          </p>
+        </div>
       </div>
-    </div> <!-- row -->
-    <div class="row h-100 footer-links">
-      <div class="col-sm-3 col-xs-6">
-        <h4>Quicklinks</h4>
-        <ul class="list-unstyled">
-          <li><a href="/">Home</a></li>
-          <li><a href="https://trust.aaf.edu.au/wp-content/uploads/AAF_PCY_Privacy-policy_v1.3_20230919-for-web-2.pdf">Privacy Policy</a></li>
-          <li><a href="https://aaf.edu.au/wp-content/uploads/2020/10/AAF_PCY_Privacy-Collection-Notice-2020.pdf">Privacy Collection Notice</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-3 col-xs-6">
-        <h4>Explore</h4>
-        <ul class="list-unstyled">
-          <li><a href="/">Tutorials</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-3 col-xs-6">
-        <h4>Help</h4>
-        <ul class="list-unstyled">
-          <li><a href="https://aaf.edu.au/about/contact-us/" target="_blank">Email Request</a></li>
-          <li><a href="https://support.aaf.edu.au/support/tickets/new">Online Request</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-3 col-xs-6">
-        <h4>External Resources</h4>
-        <ul class="list-unstyled">
+      <div class="col-12 col-sm-3">
+        <h5>External Resources</h5>
+        <ul class="list-unstyled footer-text">
           <li><a href="https://aaf.edu.au/">AAF Home</a></li>
           <li><a href="https://manager.aaf.edu.au/">Federation Manager</a></li>
           <li><a href="https://validator.aaf.edu.au/">Validator Service</a></li>
           <li><a href="https://status.aaf.edu.au/">Federation Status</a></li>
         </ul>
       </div>
-      <a href="https://www.freepik.com/free-vector/abstract-glossy-wave-dark-background_4287940.htm#&position=2&from_view=search&track=ais&uuid=8919301c-97d2-423c-9f74-280341ba4c48">Image by Creative_hat</a> on Freepik
+      <div class="col-12 col-sm-3">
+        <h5>Enabled by NCRIS</h5>
+        <div class="col-5 float-right">
+          <a href="https://www.education.gov.au/ncris" target="_blank">
+            <img class="ncris" src="{{ site.baseurl }}/assets/images/ncris_mono_rev.svg" alt="National Collaborative Research Infrastructure Strategy (NCRIS)">
+          </a>
+        </div>
+      </div>
+      <div class="col-12 col-sm-3">
+        <h5>Contact Us</h5>
+        <ul class="list-unstyled footer-text">
+          <li><a href="mailto:enquiries@aaf.edu.au">enquiries@aaf.edu.au</a></li>
+          <br>
+          <li><a href="mailto:support@aaf.edu.au">support@aaf.edu.au</a></li>
+          <br>
+          <li>Phone: +61 7 3854 2353</li>
+          <br>
+          <li>ABN 13 155 355 685</li>
+          <li>ACN 630 805 319</li>
+          <li>Trade Mark: 169 1608 ®</li>
+          <br>
+          <li><a href="https://trust.aaf.edu.au/wp-content/uploads/AAF_PCY_Privacy-policy_v1.3_20230919-for-web-2.pdf">Privacy Policy</a></li>
+          <li><a href="https://aaf.edu.au/wp-content/uploads/2020/10/AAF_PCY_Privacy-Collection-Notice-2020.pdf">Privacy Collection Notice</a></li>
+        </ul>
+      </div>
     </div>
   </div> 
 </footer>
