Fix hamburger dropdown and spacing in footer

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -60,7 +60,7 @@
           <br>
           <li>ABN 13 155 355 685</li>
           <li>ACN 630 805 319</li>
-          <li>Trade Mark: 169 1608 ®</li>
+          <li>Trademark: 169 1608 ®</li>
           <br>
           <li><a href="https://trust.aaf.edu.au/wp-content/uploads/AAF_PCY_Privacy-policy_v1.3_20230919-for-web-2.pdf">Privacy Policy</a></li>
           <li><a href="https://aaf.edu.au/wp-content/uploads/2020/10/AAF_PCY_Privacy-Collection-Notice-2020.pdf">Privacy Collection Notice</a></li>
