Fix responsive design for mobile screens (#81)
* Fix hamburger dropdown and spacing in footer

* Rename image as GitHub Pages servers are case-sensitive

* Update edugain tutorials in config

* Update logos for smaller screens

* Add quotation marks

--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/assets/images/aaflogo.png" height="60" class="mr-2" alt="AAF Tutorials">
       Tutorials
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarContent">
