--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -68,7 +68,7 @@ h1, h2, h3, h4, h5, h6 {
  */
 header {
   background-color: #969696;
-  background-image: url($baseurl + "/assets/images/aaf-image.jpg");
+  background-image: url($baseurl + "/assets/images/aaf-image-min.jpg");
   background-size: cover;
   padding-bottom: 200px;
   margin-bottom: -200px;
@@ -135,6 +135,13 @@ header {
 
   .ncris {
     width: 200px; /* Default size */
+  }
+
+  @media (min-width: 990px) {
+    .card-container {
+      margin-left: 0;
+      margin-right: 0;
+    }
   }
 
   /* For screens smaller than 1400px */
